--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             }
 
             try {
-                const response = await axios.post('https://your-backend.vercel.app/fetch-ai-data', { email });
+                const response = await axios.post('https://tappd-ulpy.vercel.app/fetch-ai-data', { email });
 
                 const data = response.data;
                 document.getElementById('firstName').value = data.firstName;
@@ -60,7 +60,7 @@
             });
 
             try {
-                await axios.post('https://tappd-ulpy-nhctn8h01-tappds-projects.vercel.app/submit', jsonData);
+                await axios.post('https://tappd-ulpy.vercel.app/submit', jsonData);
                 alert('Form submitted successfully!');
             } catch (error) {
                 console.error('Error submitting data:', error);
